[tool.poetry]
name = "entropylab-qpudb"
version = "0.0.0"
description = "A extension of entropy lab for persistent storage of calibration parameters of a quantum processing unit (QPU)."
authors = [
    "Lior Ella <lior@quantum-machines.co>",
    "Guy Kerem <guy@quantum-machines.co>",
    "Tal Shani <tal@quantum-machines.co>"
]
license = "BSD-3-Clause"
packages = [
    { include = "entropylab_qpudb" }
]
include = [
]
exclude = [
    "**/tests/**",
]
readme = "README.md"
homepage = "https://github.com/entropy-lab/entropy-qpu"

[tool.poetry.dependencies]
python = "^3.7.1"
ZODB = "^5.6.0"
pandas = "^1.2.4"
entropylab = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
poethepoet = "^0.10.0"
pytest = "^6.2.3"
flake8 = "^3.9.1"
flake8-bugbear = "^21.4.3"
pytest-cov = "^2.11.1"

[tool.black]
target-version = ["py37"]

[tool.poe.tasks]
format = "black ."
check_format = "black --check ."
lint = "flake8"
test = "pytest --junitxml=reports/junit/report.xml --cov=reports/cov --cov-report=xml"
check = ["check_format", "lint", "test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
